--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -26,6 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.dashboard', user_id=current_user.id) }}">Dashboard</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('main.upload', user_id=current_user.id) }}">upload</a>
+                    </li>
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav">
@@ -69,6 +72,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{{url_for('static', filename='js/main.js')}}"></script>
+
     {% block scripts %}{% endblock %}
 </body>
 </html>
