--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -5,7 +5,10 @@
 {% block content %}
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Custom CSS -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/upload.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
     <div class="container mt-5">
@@ -32,9 +35,12 @@
                     </table>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
+            <button type="submit" class="btn btn-primary">
+                <i class="bi bi-box-arrow-in-up display-6"></i>  Submit
+            </button>
         </form>
     </div>
-
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     
     {% endblock %}
