--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -69,7 +69,7 @@
                 <tr>
                     <th>Name</th> 
                     <th>Size</th>
-                    <th>Uploadedat</th>
+                    <th>Upload date</th>
                     <th>Delete</th>
 
 
