--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
     {% block head %}{% endblock %}
 </head>
 <body>
@@ -28,6 +30,15 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.upload', user_id=current_user.id) }}">upload</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('main.select_model', user_id=current_user.id) }}">select model</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('main.results', user_id=current_user.id) }}">Results</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('main.shared_with_me', user_id=current_user.id) }}">shared</a>
                     </li>
                     {% endif %}
                 </ul>
