--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -10,22 +10,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
     {% block head %}{% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-md "> <!-- amended expand from  "navbar-expand-lg" to mid (below 768px) ; removed "navbar-dark bg-dark" -->
-        <div class="container">
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">MyApp</a>
+    <nav class="navbar navbar-expand-md"> <!-- amended expand from  "navbar-expand-lg" to mid (below 768px) ; removed "navbar-dark bg-dark"  -->
+        <div class="container-fluid px-4">
+            <a class="navbar-brand" href="{{ url_for('main.index') }}"> <i class="bi bi-house-heart"></i> OneClickML</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.index') }}"> <i class="bi bi-house-heart"></i> Home</a>
-                    </li>
+                    </li> -->
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.dashboard', user_id=current_user.id) }}"><i class="bi bi-speedometer2"></i> Dashboard</a>
@@ -34,13 +33,13 @@
                         <a class="nav-link" href="{{ url_for('main.upload', user_id=current_user.id) }}"> <i class="bi bi-file-earmark-arrow-up"></i> Upload</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.select_model', user_id=current_user.id) }}">select model</a>
+                        <a class="nav-link" href="{{ url_for('main.select_model', user_id=current_user.id) }}"> <i class="bi bi-diagram-3"></i> Select Model</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.results', user_id=current_user.id) }}">Results</a>
+                        <a class="nav-link" href="{{ url_for('main.results', user_id=current_user.id) }}"> <i class="bi bi-bookmarks"></i> Result</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.shared_with_me', user_id=current_user.id) }}">shared</a>
+                        <a class="nav-link" href="{{ url_for('main.shared_with_me', user_id=current_user.id) }}"> <i class="bi bi-stickies"></i> Shared</a>
                     </li>
                     {% endif %}
                 </ul>
