--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -92,6 +92,7 @@
                                 <td>{{ dataset.upload_date.strftime('%Y-%m-%d %H:%M') }}</td>
                                 <td>
                                     <form action="{{ url_for('main.delete_file', file_id=dataset.id) }}" class="formdelete" method="POST" onsubmit="return confirm('Are you sure you want to delete this file?');">
+                                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                                         <button type="submit" class="btn btn-danger">Delete</button>
                                     </form>
                                 </td>
